--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- nav -->
         <nav>
             <div class="option-container">
-                <div class="nav-option-logo">logo</div>
+                <div class="nav-option-logo"><img src="img/logo.svg" alt="discord-logo"></div>
                 <div class="nav-option-link">
                     <ul>
                         <li>Scarica</li>
@@ -26,7 +26,7 @@
                         <li>Assistenza</li>
                     </ul>
                 </div>
-                <div class="nav-option-sign">sign-up</div>
+                <div class="nav-option-sign"><a href="">Accedi</a></div>
             </div>
         </nav>
     <!-- /nav -->
@@ -34,6 +34,10 @@
     <!-- Jumbotron -->
         <section class="jumbotron-container">
                 <div class="jumbotron">
+                    <h1 class="mgb">Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un gruppo scolastico,gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
+                    <a class="button-header" href="">&#8615; Scarica per Mac</a>
+                    <a class="button-header button-header-2" href="">Apri Discord nel tuo Browser</a> 
                 </div>
         </section>
 
